# argl

./: LICENSE  README.md
scripts/: create_superuser.sh  refresh.sh  start_services.sh
src/portfolio/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/portfolio/portfolio/settings/: base.py  dev.py
