[tool.poetry]
name = "argl"
version = "0.2.0"
description = ""
authors = ["Jose Lopez <jj.lopezbuilder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyascii = "0.3.2"
asgiref = "3.6.0"
beautifulsoup4 = "4.11.2"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
django = "4.1.8"
django-filter = "22.1"
django-modelcluster = "6.0"
django-permissionedforms = "0.1"
django-taggit = "3.1.0"
django-treebeard = "4.7"
djangorestframework = "3.14.0"
draftjs-exporter = "2.1.7"
et-xmlfile = "1.1.0"
html5lib = "1.1"
idna = "3.4"
l18n = "2021.3"
openpyxl = "3.1.2"
pillow = "9.5.0"
psycopg2-binary = "2.9.6"
python-dotenv = "1.0.0"
pytz = "2023.3"
requests = "2.28.2"
six = "1.16.0"
soupsieve = "2.4.1"
sqlparse = "0.4.4"
telepath = "0.3"
tzdata = "2023.3"
urllib3 = "1.26.15"
wagtail = "4.2.2"
webencodings = "0.5.1"
willow = "1.4.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
